--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="unity-build-title">VKMiniApps</div>
       </div>
     </div>
-    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <script src="//unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
     <script>
       vkBridge.send('VKWebAppInit');
       vkBridge.send('VKWebAppGetUserInfo')
